website/versioned_docs/version-2.0.0-alpha.12/node-client.containerstorage.md
---
id: version-2.0.0-alpha.12-node-client.containerstorage
title: ContainerStorage interface
hide_title: true
original_id: node-client.containerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## ContainerStorage interface


<b>Signature:</b>

```typescript
export declare interface ContainerStorage 
```

## Methods

|  Method | Description |
|  --- | --- |
|  [delAccessToken(namespace)](./node-client.containerstorage.delaccesstoken.md) |  |
|  [delAuthenticationSession(namespace)](./node-client.containerstorage.delauthenticationsession.md) |  |
|  [delIdentity(namespace)](./node-client.containerstorage.delidentity.md) |  |
|  [delMFABearerToken(namespace)](./node-client.containerstorage.delmfabearertoken.md) |  |
|  [delOAuthRedirectAction(namespace)](./node-client.containerstorage.deloauthredirectaction.md) |  |
|  [delRefreshToken(namespace)](./node-client.containerstorage.delrefreshtoken.md) |  |
|  [delSessionID(namespace)](./node-client.containerstorage.delsessionid.md) |  |
|  [delUser(namespace)](./node-client.containerstorage.deluser.md) |  |
|  [getAccessToken(namespace)](./node-client.containerstorage.getaccesstoken.md) |  |
|  [getAuthenticationSession(namespace)](./node-client.containerstorage.getauthenticationsession.md) |  |
|  [getExtraSessionInfoOptions(namespace)](./node-client.containerstorage.getextrasessioninfooptions.md) |  |
|  [getIdentity(namespace)](./node-client.containerstorage.getidentity.md) |  |
|  [getMFABearerToken(namespace)](./node-client.containerstorage.getmfabearertoken.md) |  |
|  [getOAuthRedirectAction(namespace)](./node-client.containerstorage.getoauthredirectaction.md) |  |
|  [getRefreshToken(namespace)](./node-client.containerstorage.getrefreshtoken.md) |  |
|  [getSessionID(namespace)](./node-client.containerstorage.getsessionid.md) |  |
|  [getUser(namespace)](./node-client.containerstorage.getuser.md) |  |
|  [setAccessToken(namespace, accessToken)](./node-client.containerstorage.setaccesstoken.md) |  |
|  [setAuthenticationSession(namespace, authenticationSession)](./node-client.containerstorage.setauthenticationsession.md) |  |
|  [setExtraSessionInfoOptions(namespace, options)](./node-client.containerstorage.setextrasessioninfooptions.md) |  |
|  [setIdentity(namespace, identity)](./node-client.containerstorage.setidentity.md) |  |
|  [setMFABearerToken(namespace, mfaBearerToken)](./node-client.containerstorage.setmfabearertoken.md) |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./node-client.containerstorage.setoauthredirectaction.md) |  |
|  [setRefreshToken(namespace, refreshToken)](./node-client.containerstorage.setrefreshtoken.md) |  |
|  [setSessionID(namespace, sessionID)](./node-client.containerstorage.setsessionid.md) |  |
|  [setUser(namespace, user)](./node-client.containerstorage.setuser.md) |  |

